--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <audio id="winSoundX" src="Xwin.mp3"></audio>
     <audio id="winSoundO" src="Owin.mp3"></audio>
     <audio id="drawSound" src="drawwin.mp3"></audio>
-
+    <div id="footer">Powered by : TheApp6000 </div>
     <script src="script.js"></script>
 </body>
 </html>
